--- a/waste-segregation.ipynb
+++ b/waste-segregation.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "50426948",
    "metadata": {
     "execution": {
@@ -88,8 +88,6 @@
    },
    "outputs": [],
    "source": [
-    "# We'll define a search_images function for the sake of ease\n",
-    "\n",
     "def search_images(term, max_images=30, folder_name=\".\"):\n",
     "    print(f\"Searching for '{term}'\")\n",
     "    crawler = MyCrawler(\n",
@@ -308,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e187d79b",
    "metadata": {
     "execution": {
@@ -1061,11 +1059,7 @@
     }
    ],
    "source": [
-    "## !! IMPORTANT\n",
-    "# This represents the number of photos that'll be downloaded for each category.\n",
-    "# If you don't want to wait you can lower this number so less images will be downloaded.\n",
-    "# Having less images to train on may lead to worse neural network performance.\n",
-    "no_of_photos = 20 # Default is 20\n",
+    "no_of_photos = 20\n",
     "\n",
     "searches = 'Electronic Waste','Biodegradable Waste','Plastic Waste','Paper Waste','Metal Waste'\n",
     "\n",
@@ -1077,11 +1071,10 @@
     "    print(f'This is dest, {dest}')\n",
     "    dest.mkdir(exist_ok=True, parents=True)\n",
     "    search_images(f\"{o} photo\", no_of_photos, dest)\n",
-    "    sleep(10)  # Pause between searches to avoid over-loading server\n",
+    "    sleep(10)\n",
     "    search_images(f\"{o} sun photo\", no_of_photos, dest)\n",
     "    sleep(10)\n",
     "    search_images(f\"{o} night photo\", no_of_photos, dest) \n",
-    "    # Changed this to get \"night photo\" instead of \"shade photo\" since the original would cause paint tones to be downloaded \n",
     "    sleep(10)\n",
     "    print(f\"Photos of {o} completed!\")\n",
     "\n",
@@ -1418,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "aa50ce9f",
    "metadata": {
     "execution": {
@@ -1446,7 +1439,6 @@
     }
    ],
    "source": [
-    "# Check for category index\n",
     "classes = list(learn.dls.vocab)\n",
     "\n",
     "print(classes)"
@@ -1454,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a748db9a",
    "metadata": {
     "execution": {
@@ -1532,17 +1524,16 @@
    ],
    "source": [
     "predicted_class,_,probs = learn.predict(im)\n",
-    "# is_bird,_,probs = learn.predict(PILImage.create('forest000001.png'))\n",
     "print(f\"This is a: {predicted_class}.\")\n",
     "predicted_idx = classes.index(predicted_class)\n",
-    "# print(f\"Probability it's a {predicted_class}: {probs[predicted_idx]:.4f}\")\n",
+    "\n",
     "for idx, ele in enumerate(classes):\n",
     "    print(f\"Probability it's a {ele}: {probs[idx]:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "4aedbd53",
    "metadata": {
     "execution": {
@@ -1563,7 +1554,6 @@
    "outputs": [],
    "source": [
     "#Export the model\n",
-    "\n",
     "learn.export('waste_segregation_model.pkl')"
    ]
   },
